fix: change to dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: #2c3030;
   padding: 0;
   margin: 0;
   font-family: Arial, sans-serif;
